# gst-wrapper

./: .gitignore  CMakeLists.txt  README.md
cmake/: install.cmake.in
include/: gst_appsink.h  gst_appsrc.h  gst_filesink.h  gst_filesrc.h  gst_sample_data.h  gst_wrapper.h
include/gst_wrapper/: gst_appsink.h  gst_appsrc.h  gst_filesink.h  gst_filesrc.h  gst_sample_data.h  gst_wrapper.h
src/: gst_appsink.cpp  gst_appsrc.cpp  gst_filesink.cpp  gst_filesrc.cpp  gst_sample_data.cpp  gst_wrapper.cpp
test/: CMakeLists.txt  main.cpp  test_appsrc.cpp  test_tee.cpp  test_unlink.cpp
